--- a/kickstarter-project.ipynb
+++ b/kickstarter-project.ipynb
@@ -1685,14 +1685,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     " # Try to find best result for more depths of tree\n",
-    "depths = range(1,20)\n",
-    "count_trees = range(1,800,150)\n",
-    "max_features = range(5,65,10)\n",
+    "depths = range(1,20,5)\n",
+    "count_trees = range(1,800,200)\n",
+    "max_features = range(5,65,20)\n",
     "acc = []\n",
     "RMSE = []\n",
     "for depth in depths:\n",
@@ -1703,6 +1703,66 @@
     "            acc.append([metrics.accuracy_score(label, predicted), depth, n_est, max_f])\n",
     "            RMSE.append([np.sqrt(metrics.mean_squared_error(label, predicted)), depth, n_est, max_f])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.8874085263599896, 1, 401, 25]\n",
+      "[0.4321948726963089, 1, 401, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "acc.sort(key=lambda x: x[0], reverse=True)\n",
+    "print(acc[0])\n",
+    "\n",
+    "RMSE.sort(key=lambda x: x[0], reverse=False)\n",
+    "print(RMSE[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "\n",
+    "model = GradientBoostingClassifier(max_depth=5, random_state=444)\n",
+    "predicted = cross_val_predict(model, featurse, label, cv=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[DecisionTree] Accurency of the best configuration: 0.8895555655322307\n",
+      "[DecisionTree] RMSE of the best configuration: 0.1760624938929544\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"[DecisionTree] Accurency of the best configuration: \" + str(metrics.accuracy_score(label, predicted)))\n",
+    "print(\"[DecisionTree] RMSE of the best configuration: \" + str(metrics.mean_squared_error(label, predicted)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
