--- a/kickstarter-project.ipynb
+++ b/kickstarter-project.ipynb
@@ -581,8 +581,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data.state[data.state == 4] = 0\n",
-    "# data.state[data.state == 1] = 0\n",
+    "data.state[data.state == 4] = 0\n",
+    "data.state[data.state == 1] = 0\n",
     "data = data[data.state != 3]\n",
     "data = data[data.state != 5]"
    ]
@@ -590,9 +590,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "We can split category 'canceled' and 'suspended' to category FILED. And remove data of category UNDEFINED and LIFE, becose it is importent data to use over model. We wan detect only success or not. "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
